# shell-scripting-templates

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .shellcheckrc  .typos.toml  .yamllint.yml  Firefox.sh  LICENSE  NOTES.md  README.md  UGLY.bash  UGLY.sh  _declare_ansi_escape_sequences.sh  _declare_global_display_constants.sh  _die.sh  _echo_args.sh  _err.sh  _error.sh  _find_nearest_integer.sh  _generate_password.sh  _get_directory_path.sh  _get_file_directory.sh  _get_file_extension.sh  _get_file_name.sh  _get_file_name_without_extension.sh  _get_file_path.sh  _implode.sh  _inform.sh  _is_blank.sh  _is_empty.sh  _is_integer.sh  _is_positive_integer.sh  _join.sh  _lorem.sh  _repeat.sh  _send_mail_msg.sh  _send_sms_msg.sh  _str_repeat.sh  _time_convert_s_to_hhmmss.sh  (+68 more)
.hooks/: README.md  pre-commit.sh
docs/: coding-standards.md  consts.md  description.md  detailed-usage.md  documentation.md  error-handling.md  function-list.md  functions-list.md  installation.md  makedoc  style-guide.md
etc/: .gitignore  README.md  pushover.cfg.sample
examples/: _introduce.sh  repeat  session-info  template
lib/: Array.sh  Http.sh  Log.sh  Maven.sh  Nexus.sh  README.md  Ssh.sh  String.sh  System.sh  Util.sh  htmlDecode.sed  parseOpts.sh  parseOpts.sh2  setupScriptFunctions.sh  sharedFunctions.sh  sharedVariables.sh  utils.sh
lib/apache/: _is_apache_vhost.sh
lib/arrays/: _dedupe_array.sh  (+15 more)
macControl/: moomAtDesk.sh
sedfiles/: README.md  htmlDecode.sed  htmlEncode.sed  stopwords.sed
setupScripts/: README.MD  casks.sh  devApps.sh  dropbox.sh  fileTest.sh  homebrew.sh  install_command_line_tools.sh  install_latest_adobe_flash_player.sh  macApps.sh  mackup.sh  newMacSetup.sh  osx.sh  ruby.sh  setOSXPrefs.sh  ssd.sh  ssh.sh
syncScripts/: .gitignore  README.md  SyncTemplate.sh
templates/: _library_function.sh  script
test/: Array.bats  alerts.bats  apache  array  arrays.bats  backup.bats  baseHelpers.bats  checks.bats  compile  compile.bats  dates.bats  debug.bats  directory  files  files.bats  http.bats  lorem  mail  maven  maven.bats  misc.bats  nexus  nexus.bats  number  numbers.bats  password  passwords.bats  procedures  procedures.bats  scriptTemplate.bats  sms  ssh  ssh.bats  standaloneTemplate.bats  string  string.bats  strings.bats  system.bats  template.bats  template_source_utils.bats  (+9 more)
tmp/: .gitignore
utilities/: alerts.bash  arrays.bash  baseHelpers.bash  checks.bash  csv.bash  dates.bash  debug.bash  files.bash  macOS.bash  misc.bash  numbers.bash  services.bash  strings.bash  template_utils.bash  textProcessing.bash
(+436 files in other folders)
