[tool.poetry]
    authors     = ["Nathaniel Landau <nate@natelandau.com>"]
    description = "Shell scripting utility functions and a bash script boilerplate templates"
    homepage    = "https://github.com/natelandau/shell-scripting-templates"
    license     = "MIT"
    name        = "shell-scripting-templates"
    readme      = "README.md"
    repository  = "https://github.com/natelandau/shell-scripting-templates"
    version     = "0.1.0"

    [tool.poetry.dependencies]
        commitizen = "^3.7.0"
        poethepoet = "^0.22.0"
        pre-commit = "^3.3.3"
        python     = "^3.11"
        typos      = "^1.16.8"
        yamllint   = "^1.32.0"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core"]

[tool.commitizen]
    bump_message             = "bump(release): v$current_version → v$new_version"
    tag_format               = "v$version"
    update_changelog_on_bump = true
    version                  = "0.1.0"
    version_files            = ["pyproject.toml:version"]

[tool.poe.tasks]

    [tool.poe.tasks.lint]
        help = "Lint this package"

        [[tool.poe.tasks.lint.sequence]]
            shell = "poetry check"

        [[tool.poe.tasks.lint.sequence]]
            shell = "typos"

        [[tool.poe.tasks.lint.sequence]]
            shell = "yamllint ."

            # [[tool.poe.tasks.lint.sequence]]
            #     shell = "shellcheck bin-*/*"

        [[tool.poe.tasks.lint.sequence]]
            shell = "pre-commit run --all-files"
